# friendly_file_server_rust

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  build_frontend.bash  config.json  create_db.sql  credentials  query.sql
admin/: package-lock.json  package.json
admin/src/: api.tsx
catalogue/: package-lock.json  package.json
catalogue/public/: index.html
catalogue/src/: index.tsx
catalogue/src/components/: App.css  App.tsx  Card.css  Card.tsx  CardDisplay.css  CardDisplay.tsx  Dropdown.tsx  ModalPopup.css  ModalPopup.tsx  MovieInfo.tsx  TvShowInfo.css  TvShowInfo.tsx
catalogue/src/models/: CardItem.ts  Episode.ts  Movie.ts  Season.ts  TvShow.ts
cinema/: package-lock.json  package.json
cinema/src/: Websocket.ts  config.ts  index.css  index.tsx  messages.ts  party.ts  playerstate.ts  user.ts  utils.ts  websocket-wrapper.ts
cinema/src/components/: Cinema.css  Cinema.tsx  ControlButton.css  ControlButton.tsx  CreateRoom.tsx  ModalPopup.css  ModalPopup.tsx  ProgressBar.css  ProgressBar.tsx  SideContent.css  SideContent.tsx  Spinner.css  Spinner.tsx  UsersTable.css  UsersTable.tsx  VideoPlayer.css  VideoPlayer.tsx
cinema/src/messages/: DisconnectedMessage.ts  Message.ts  MessageRouter.ts  PauseMessage.ts  PlayMessage.ts  RequestStatsMessage.ts  SeekedMessage.ts  StatsMessage.tsx  StatsResponseMessage.ts  StatsResponsesMessage.ts
data/: catalogue.json
src/: args.rs  db.rs  db_models.rs  fs_utils.rs  hb_helpers.rs  main copy.rs  main.rs  messages.rs  movies.rs
src/webserver/: filters.rs  handlers.rs  messages.rs  mod.rs  models.rs  rejections.rs  websocket.rs
static/: cinema.css  cinema.js  listing.css  login.html
templates/: cinema.html.hb  cinema.html.j2  listing.html.hb
