[package]
name = "warp_test"
version = "0.1.0"
authors = ["mickjohn <mickjohnashe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2", features = ["websocket"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"