[package]
name = "friendly_file_server_rust"
version = "0.1.0"
authors = ["mickjohn <mickjohnashe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "time", "rt-core", "dns", "net"] }
warp = { version = "0.2", features = ["websocket"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
chrono = "0.4.11"
handlebars = "3.1.0"
lazy_static = "1.4.0"
url = "2.1.1"
clap = "2.33"
bcrypt = "0.8"
rust-argon2 = "0.8.2"
rand = { version = "0.7.3", features = ["small_rng"] }
base64 = "0.12.3"
log = "0.4.8"
tokio-postgres = { version = "0.5.5", features=["with-serde_json-1"] }